took out media for screen greater than 1500px because of a layout issue

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -213,10 +213,7 @@ span.email-address{display:block;margin-bottom: 2rem;}
 @media (min-width:1305px){
 span.email-address{display: inline;}
 }
-@media (min-width:1500px){.intro-img img{display:block;max-width:70%;}
-.slide .row{top:50%;position:relative;margin-top:-340px !important;}
-main#main{position: absolute;}
-}
+
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { 
 /* IE10+ specific styles go here */
 body.preloading {overflow-y: auto !important;}
